--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,6 @@ script:
 notifications:
   email:
     recipients:
-      - cuiqiu@pingcap.com
+      - test@pingcap.com
     on_success: change
     on_failure: always
